--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
-plugins {
-    id 'com.android.application' version '8.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'androidx.navigation.safeargs' version '2.6.0' apply false
+buildscript {
+    ext {
+        koin_version = '3.4.3'
+        kotlin_version = '1.8.10'
+        navigation_version = '2.6.0'
+        lifecycle_version = '2.6.1'
+    }
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+    }
 }
