--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     // Coil
     implementation "io.coil-kt:coil:2.4.0"
 
+    // Material3
+    implementation "androidx.compose.material3:material3:1.1.1"
+
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
