--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     // Material3
     implementation "androidx.compose.material3:material3:1.1.1"
 
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
